<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">


    <ImageView
        android:id="@+id/notepadImg"
        android:layout_width="133dp"
        android:layout_height="137dp"
        android:src="@drawable/notepad_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/title_font"
        android:gravity="center"
        android:text="@string/SecureNotepad"
        android:textColor="#494949"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notepadImg" />

    <TextView
        android:id="@+id/typePasswordInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/TypePassword"
        android:textColor="#494949"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextLogin"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passwordTextLogin"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:ems="10"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12sp"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"/>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/title_font"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="#494949"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLogin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/forgetButton"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/title_font"
        android:text="@string/ForgetPass"
        android:textAllCaps="false"
        android:textColor="#494949"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>